[package]
name = "timber"
version = "0.1.0"
authors = ["cybiere"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
toml = "0.5"
serde_regex = "1"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
